# aiot_play_fw_zephyr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  nrf52833dk_nrf52833.overlay  prj.conf  workspace.code-workspace
config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
docs/: 0-1.drawio  docs_copyrights.txt
python/: smip_to_memfault_exporter.py
src/: board.c  board.h  main.c  ntw.c  ntw.h  periodictimer.c  periodictimer.h
src/sm_clib-REL-1.0.2.9/sm_clib/ports/zephyr/: dn_uart.c
